# openrdv-agent

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
docs/html/: AttestManager_8cpp_source.html  AttestManager_8h_source.html  AttestPluginLoader_8cpp_source.html  AttestPluginLoader_8h_source.html  AttestPlugin_8h_source.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp_source.html  LogStreamDecorator_8h_source.html  SamplePlugin_8cpp_source.html  ServerConnection_8cpp_source.html  ServerConnection_8h_source.html  annotated.html  classSamplePlugin-members.html  classSamplePlugin.html  classSamplePlugin__coll__graph.map  classSamplePlugin__coll__graph.md5  classes.html  classopenrdv_1_1AttestManager-members.html  classopenrdv_1_1AttestManager.html  classopenrdv_1_1AttestPlugin-members.html  classopenrdv_1_1AttestPlugin.html  classopenrdv_1_1AttestPluginLoader-members.html  classopenrdv_1_1AttestPluginLoader.html  classopenrdv_1_1AttestPluginLoader__coll__graph.dot  classopenrdv_1_1AttestPluginLoader__inherit__graph.map  classopenrdv_1_1AttestPluginLoader__inherit__graph.md5  classopenrdv_1_1AttestPlugin__inherit__graph.map  classopenrdv_1_1AttestPlugin__inherit__graph.md5  classopenrdv_1_1LogStreamDecorator-members.html  (+45 more)
docs/latex/: annotated.tex  (+8 more)
include/: AttestManager.h  AttestPlugin.h  AttestPluginLoader.h  AttestProvider.h  AttestProviderLoader.h  LogStreamDecorator.h  ServerConnection.h
plugins/: SamplePlugin.cpp
src/: AttestManager.cpp  AttestPluginLoader.cpp  AttestProviderLoader.cpp  ServerConnection.cpp
test/: AgentTest.cpp
(+32 files in other folders)
